# Turtlesim-Trajectories

./: Sum.txt
install/turtlebot_path_planner/lib/turtlebot_path_planner/: path_planner
install/turtlebot_path_planner/share/turtlebot_path_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  path_planner.launch.py
src/turtlebot_path_planner/: setup.cfg  setup.py
src/turtlebot_path_planner/turtlebot_path_planner/: path_planner.py
