<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_path_planner</name>
  <version>0.0.0</version>
  <description>A package for turtlebot path planning with multiple trajectories (circle, square, infinity, star).</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
